--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<script src="main.js"></script>
+		<script src="src/scenes/main.js"></script>
 	</body>
 </html>
