Updates folder structure, imports assets

--- a/HelloWorld/index.html
+++ b/HelloWorld/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<script src="node_modules/phaser/dist/phaser.min.js"></script>
+		<script src="../node_modules/phaser/dist/phaser.min.js"></script>
 		<title>Document</title>
 	</head>
 	<body>
