Refactoring, Menu scene, next level options

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<script src="../node_modules/phaser/dist/phaser.min.js"></script>
-		<title>Document</title>
+		<title>Sokoban</title>
 	</head>
 	<body>
 		<script type="module" src="main.js"></script>
