--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<script src="../node_modules/phaser/dist/phaser.min.js"></script>
+		<script src="node_modules/phaser/dist/phaser.min.js"></script>
 		<title>Sokoban</title>
 	</head>
 	<body>
-		<script type="module" src="main.js"></script>
+		<script type="module" src="src/main.js"></script>
 	</body>
 </html>
