--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Sokoban</title>
 	</head>
 	<body>
+		<h1>Sokoban</h1>
 		<script type="module" src="src/main.js"></script>
 	</body>
 </html>
