--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Sokoban</title>
 	</head>
 	<body>
+		<div id="gameContainer" style="width: calc(100% - 400px); height: calc(100% - 400px); margin: 200px auto;"></div>
 		<script type="module" src="src/main.js"></script>
 	</body>
 </html>
