--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<script src="node_modules/phaser/dist/phaser.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
 		<title>Sokoban</title>
 	</head>
 	<body>
