--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 		<meta charset="UTF-8">
 		<script src="node_modules/phaser/dist/phaser.min.js"></script>
 		<title>Sokoban</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<link rel="stylesheet" href="styles.css">
 	</head>
+	<style>
+		@font-face {
+			font-family: 'LoveGlitch';
+			src: url('assets/fonts/love-glitch/LoveGlitchPersonalUseRegular.ttf') format('truetype');
+		}
+	</style>
 	<body>
-		<div id="gameContainer" style="width: calc(100% - 400px); height: calc(100% - 400px); margin: 200px auto; background-color: black;"></div>
-		<script type="module" src="src/main.js"></script>
+		<div id="header">Placeholder Header</div>
+		<div id="main-content">
+			<div id="sidebar-left">Placeholder Sidebar Left</div>
+			<div id="gameContainer"><script type="module" src="src/main.js"></script></div>
+			<div id="sidebar-right">Placeholder Sidebar Right</div>
+		</div>
+		<div id="footer">Placeholder Footer</div>
 	</body>
 </html>
