Some rush updates, should be merged carefully

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		}
 	</style>
 	<body>
-		<div id="header">Placeholder Header</div>
+		<div id="header">
+			<h1>Sokoban</h1>
+		</div>
 		<div id="main-content">
-			<div id="sidebar-left">Placeholder Sidebar Left</div>
-			<div id="gameContainer"><script type="module" src="src/main.js"></script></div>
-			<div id="sidebar-right">Placeholder Sidebar Right</div>
+			<div id="gameContainer"><script type="module" src="src/game.js"></script></div>
 		</div>
 		<div id="footer">Placeholder Footer</div>
 	</body>
