Updates html and fonts

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 	</head>
 	<style>
 		@font-face {
-			font-family: 'LoveGlitch';
-			src: url('assets/fonts/love-glitch/LoveGlitchPersonalUseRegular.ttf') format('truetype');
+			font-family: 'PixelEmulator';
+			src: url('assets/fonts/pixel-emulator-font/PixelEmulator.ttf') format('truetype');
 		}
 	</style>
 	<body>
-		<div id="header">
+		<div id="header" style="text-align: center; font-size: 20px;">
 			<h1>Sokoban</h1>
 		</div>
 		<div id="main-content">
 			<div id="gameContainer"><script type="module" src="src/game.js"></script></div>
 		</div>
-		<div id="footer">Placeholder Footer</div>
+		<div id="footer">
+			<p>Created by Levent Çelik, Akshitha Jakkam, and Anjan Kumar Depuru as part of CPSC 8710 Fall 23.</p>
+			<p>Clemson University</p>
+		</div>
 	</body>
 </html>
